--- a/index.ipynb
+++ b/index.ipynb
@@ -63,11 +63,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlite3 as sql\n",
+    "conn = sql.connect('dogs.db')\n",
+    "c = conn.cursor()\n",
     "#Your code here; import sqlite, create a connection and then a cursor object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (2, 'McGruff', 10, 'M', 'bloodhound', 'aware', 0),\n",
+       " (3, 'Scooby', 6, 'M', 'great dane', 'hungry', 1),\n",
+       " (4, 'Little Ann', 5, 'F', 'coonhound', 'loyal', 0),\n",
+       " (5, 'Pickles', 13, 'F', 'black lab', 'mischievous', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (7, 'Lassie', 7, 'F', 'collie', 'loving', 1),\n",
+       " (8, 'Snowy', 8, 'F', 'fox terrier', 'adventurous', 0),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('''select * from dogs''').fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('id', None, None, None, None, None, None),\n",
+       " ('name', None, None, None, None, None, None),\n",
+       " ('age', None, None, None, None, None, None),\n",
+       " ('gender', None, None, None, None, None, None),\n",
+       " ('breed', None, None, None, None, None, None),\n",
+       " ('temperament', None, None, None, None, None, None),\n",
+       " ('hungry', None, None, None, None, None, None))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.description"
    ]
   },
   {
@@ -95,11 +152,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>breed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Little Ann</td>\n",
+       "      <td>coonhound</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pickles</td>\n",
+       "      <td>black lab</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lassie</td>\n",
+       "      <td>collie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Snowy</td>\n",
+       "      <td>fox terrier</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name        breed\n",
+       "0  Little Ann    coonhound\n",
+       "1     Pickles    black lab\n",
+       "2      Lassie       collie\n",
+       "3       Snowy  fox terrier"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "c.execute('''select name, breed from dogs where gender = 'F';''')\n",
+    "df = pd.DataFrame(c.fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
@@ -111,11 +236,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('Clifford',),\n",
+       " ('Lassie',),\n",
+       " ('Little Ann',),\n",
+       " ('McGruff',),\n",
+       " ('Pickles',),\n",
+       " ('Scooby',),\n",
+       " ('Snoopy',),\n",
+       " ('Snowy',)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "c.execute('''select name from dogs order by name ''').fetchall()"
    ]
   },
   {
@@ -127,11 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "c.execute('''select * from dogs where name is null''').fetchall()"
    ]
   },
   {
@@ -143,10 +298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 'beagle'),\n",
+       " ('Clifford', 'big red'),\n",
+       " (None, 'golden retriever'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Pickles', 'black lab')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "c.execute('''select name, breed from dogs where hungry = 1 order by age''').fetchall()\n",
     "#Your code here"
    ]
   },
@@ -159,11 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Pickles', 13, 'mischievous')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "c.execute('''select name, age, temperament from dogs order by age DESC''').fetchone()\n"
    ]
   },
   {
@@ -175,11 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "c.execute('''select * from dogs order by age limit 3''').fetchall()\n"
    ]
   },
   {
@@ -191,11 +387,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'bloodhound', 10),\n",
+       " ('Scooby', 'great dane', 6),\n",
+       " ('Little Ann', 'coonhound', 5),\n",
+       " ('Lassie', 'collie', 7),\n",
+       " ('Snowy', 'fox terrier', 8)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "c.execute('''select name, breed, age from dogs where age >=5 and age<=10;''').fetchall()"
    ]
   },
   {
@@ -207,11 +418,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 4, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Snoopy', 3, 1)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "c.execute('''select name, age, hungry from dogs where hungry = 1 and age >= 2 and age <=7 order by name;''').fetchall()"
    ]
   },
   {
@@ -245,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
